# MultiTraitModel

./: .gitignore  Makefile  README.md  promt.txt  pyproject.toml
configs/: cv_dataset_stratified_1721.yaml  full_train_1522.yaml  study1_baseline_cv_1721_paper.yaml  study1_transferability_1721_paper.yaml  transferability.yaml  transferability_all_datasets_1721.yaml
configs/experiments/: base.yaml  baseline.yaml  scene_infer_uncertainty.yaml  shap_eval.yaml  ssl_benchmark.yaml  study1_baseline_suite_1721.yaml  study2_uncertainty_1522.yaml  study4_ssl_full_plan.yaml  study4_ssl_mae_vs_baseline.yaml  uncertainty.yaml
scripts/: aggregate_results.py  aggregate_transfer_results.py  align_v2_to_1721_reference.py  create_dataset_versions.py  eda_quality_check.py  prepare_splits.py  process_raw_to_processed.py  sanity_check.py  sweep_cv.sh
slurm/: baseline_tuning.sh  ssl_benchmark.sh  sweep.sh  train_cv.sh  train_transfer.sh  uncertainty_distance.sh
src/plant_trait_retrieval/: __init__.py
src/plant_trait_retrieval/apps/: gradio_baseline_uncertainty.py  gradio_disun_scene.py  gradio_model_zoo.py
src/plant_trait_retrieval/data/: __init__.py  dataset.py  hsi_scene.py  loaders.py  preprocessing.py  splitter.py
src/plant_trait_retrieval/evaluation/: __init__.py  evaluate.py  evaluator.py  metrics.py  shap_importance.py
src/plant_trait_retrieval/experiments/: baseline.py  shap_eval.py  ssl_benchmark.py  uncertainty_eval.py  uncertainty_scene_infer.py
src/plant_trait_retrieval/models/: __init__.py  efficientnet1d.py  registry.py  single_cnn1d.py
src/plant_trait_retrieval/ssl/: __init__.py  mae.py  training.py
src/plant_trait_retrieval/training/: __init__.py  losses.py  optim.py  train_cv.py  train_full.py  train_transfer.py  trainer.py
src/plant_trait_retrieval/uncertainty/: __init__.py  distance.py
src/plant_trait_retrieval/utils/: __init__.py  io.py  misc.py
tests/: test_core.py
